# MovieLens-TwoTower-RecSys

./: .gitignore  README.md  pyproject.toml
api/: main.py
data/: download_movielens.sh
notebooks/: 01_eda_movielens.ipynb  02_baseline_mf_implicit.ipynb  03_ncf_pytorch_exp.ipynb  04_two_tower_metadata.ipynb
